monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2106/A2106d.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2106;

grammar A2106d {
  enum A = "a";

  abstract B implements A;

}

